Fixed: arrows is showing on mobile device.

--- a/assets/scss/public/_theme.scss
+++ b/assets/scss/public/_theme.scss
@@ -34,17 +34,6 @@
         }
     }
 
-    @media (max-width: 767px) {
-        &:hover {
-            .owl-nav {
-                display: none;
-            }
-        }
-        .owl-nav {
-            display: none;
-        }
-    }
-
     &.arrows-visible-always {
         .owl-prev,
         .owl-next {
